[package]
name = "rust"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { git = "https://github.com/tokio-rs/axum.git", branch = "main" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { git = "https://github.com/launchbadge/sqlx.git", features = [ "runtime-tokio", "mysql", "chrono" ] }
regex = "1.8.1"
once_cell = "1.17.1"
memcache = { version = "0.17.0", default-features = false}
bincode = "1.3.3"
chrono = { version = "0.4.24", features = ["serde"] }
derive_more = "0.99.17"
handlebars = "4.3.6"
rand = "0.8.5"
uuid = {version = "1.3.2", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]}
